# tlstest

./: CMakeLists.txt  CMakePresets.json  README.md
data/: my_private_key.pem  my_x509.pem
serverclient/: CMakeLists.txt  serverclient.cpp  socketservertls.cpp  socketservertls.h
shared/: CMakeLists.txt  linkdefines.h  net.cpp  net.h
